2006-08-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* add utility function into skel/utility.kahua.
	
2006-08-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.5.1 released.

2006-08-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-httpd.scm:
	- Clean up all kind of error handling.
	- Clean up dead code.
	- Request line, method, URI, HTTP version are as parameters now.
	- Index file supported.  Now only index.html.
	- Add Content-Length when document is static one.

2006-08-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-httpd.scm:
	- Fix unexpected error when "/" is requested URI.
	- Some error output entry added.
	- Return status 500 when catch unknow error.

2006-08-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: now make-kahua-collection collects also new instance
	  before kahua-db-sync.

2006-08-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: the problem that install process fail when you install
	  for the first time and make uninstall don't work properly.

2006-07-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.5 released.

2006-07-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* doc/Scripts/kahua-httpd, doc/Scripts/kahua-dbutil: Add

	* doc/Setup.ja: Catch up to current version.

	* configure.ac: Bump version number up to 0.5.

2006-07-30  Katsutoshi Itoh <cut-sea@kahua.org>

        * modify and add functions into debug-support.kahua.

2006-07-29  Katsutoshi Itoh <cut-sea@kahua.org>

	* sanitize node in node->html (skel/debug-support.kahua).
	
2006-07-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* skel/*, src/kahua-package.scm, src/kahua-config.scm: Added.
	  Package manager, configuration utility.

	* Fix many bugs.

	* src/kahua-httpd.scm: Added
	- Simple HTTPd server.
	- It invoked from kahua-spvr, but you can start kahua-httpd
	  separatedly.
	- Now test/spvr-httpd.scm renamed into test/httpd.scm.
	- It can set UID and GID to specified user:group with --runas
	  option when started with root privilege.